--- a/frontend/src/components/NavButtons/NavButtons.css
+++ b/frontend/src/components/NavButtons/NavButtons.css
@@ -21,7 +21,7 @@
   }
   
 .nav-button.active {
-    color: #5c2a2a; /* Active button text color */
+    color: #11B222; /* Active button text color */
     font-weight: bold;
 }
   
