--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,15 @@
 :root {
   /* background colors */
-  --bg-color: -webkit-linear-gradient(270deg, hsla(0, 0%, 100%, 1) 0%, hsla(261, 19%, 86%, 1) 100%);
+  --bg-color: -webkit-linear-gradient(270deg, hsla(0, 0%, 95%, 1) 0%, hsla(261, 19%, 86%, 1) 100%);
 
   /* font colors */
-  --font-color: #713337;
+  --font-color: #28BE5A;
 
   /* font */
   --font: 'Poppins', sans-serif;
 
   /* button color */
-  --button-color: #713337;
+  --button-color: #25A132;
 
   /* shadow */
   --box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
