--- a/frontend/src/components/HomeCreation/Homes/Homes.css
+++ b/frontend/src/components/HomeCreation/Homes/Homes.css
@@ -14,6 +14,8 @@
     padding: 20px;
     width: 100%;
     background-color: transparent;
+    color: #8D8D8D;
+    font-weight: bold;
 }
 
 .homeitems-container {
