--- a/frontendv2/src/components/Switch/Switch.css
+++ b/frontendv2/src/components/Switch/Switch.css
@@ -1,28 +1,27 @@
-.switch-container {
+.switch {
     width: 60px;
-    height: 25px;
-    background-color: var(--dark-card);
+    height: 100%;
     border-radius: 20px;
-    padding: 4px;
-    position: relative;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 4px;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s;
 }
-
-.switch-button {
-    width: 20px;
-    height: 20px;
-    background-color: var(--error-red);
+  
+.switch-handle {
+    width: 22px;
+    height: 22px;
     border-radius: 50%;
-    position: absolute;
-    top: 2.5px;
-    left: 3px;
-    transition: transform 0.3s ease, background-color 0.3s ease;
+    transition: transform 0.3s, background-color 0.3s;
 }
-
-.switch-button.active {
-    transform: translateX(33px);
-    background-color: var(--green);
+  
+.switch-on {
+    transform: translateX(30px);
 }
+  
+.switch-off {
+    transform: translateX(0);
+}  
