--- a/frontendv2/src/pages/HomeOverview/HomeOverview.css
+++ b/frontendv2/src/pages/HomeOverview/HomeOverview.css
@@ -5,8 +5,6 @@
     gap: 10px;
 }
 
-/* .sidebar-section-ho {} */
-
 .content-section-ho {
     display: flex;
     flex-direction: column;
@@ -29,7 +27,7 @@
 .upper-component-section-ho {
     display: flex;
     gap: 10px;
-    height: 40%;
+    height: 30%;
     justify-content: space-between;
 }
 
@@ -65,7 +63,7 @@
 }
 
 .dev-registered-text {
-    width: 100%;
+    flex-grow: 1;
     color: var(--white-30);
     font-size: 16px;
     font-weight: 600;
@@ -145,12 +143,16 @@
     border-radius: 8px;
     background-color: var(--white-30);
     box-shadow: var(--box-shadow);
-}
-
-.lower-container1, .lower-container2, .lower-container3 {
     display: flex;
     gap: 20px;
     padding: 20px;
+    flex-direction: column;
+}
+
+.lower-container2-comp-container, .lower-container3-comp-container, .lower-container1-comp-container {
+    gap: 8px;
+    display: flex;
+    flex-direction: column;
 }
 
 .devices-title-ho-container, .recent-act-ho-container, .presets-ho-container {
