--- a/frontendv2/src/components/Sidebar/Sidebar.css
+++ b/frontendv2/src/components/Sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
     font-family: var(--font);
     width: 230px;
-    height: 748px;
+    height: 100%;
     background-color: var(--white-30);
     display: flex;
     flex-direction: column;
