--- a/frontendv2/src/pages/LoginRegisterPage/LoginRegisterPage.css
+++ b/frontendv2/src/pages/LoginRegisterPage/LoginRegisterPage.css
@@ -1,7 +1,7 @@
 .log-reg-container {
     display: flex;
     width: 100%;
-    height: 640px;
+    height: 100vh;
     background-color: var(--white-30);
     border-radius: 10px;
     padding: 10px;
